--- a/notebook/SpeechClassification.ipynb
+++ b/notebook/SpeechClassification.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "0661f2e8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "088990d8",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "[24783 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "5a86044c",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "7c7dd591",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "[24783 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "bbbbca2c",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        "[31962 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "aba49a79",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
        "[31962 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "44a1c9f7",
    "metadata": {},
    "outputs": [
@@ -704,7 +704,7 @@
        "[17197 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "44ea4dda",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
        "[17197 rows x 1 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "a371fb5c",
    "metadata": {},
    "outputs": [
@@ -831,7 +831,7 @@
        "<Axes: xlabel='class', ylabel='count'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "d5d53a19",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
        "<Axes: xlabel='label', ylabel='count'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "2d36de8e",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "cdb30b25",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,7 @@
        "0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "0f0e6cea",
    "metadata": {},
    "outputs": [
@@ -940,7 +940,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "bf63461c",
    "metadata": {},
    "outputs": [
@@ -961,7 +961,7 @@
        "0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "fe488f3b",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1079,7 @@
        "[4163 rows x 2 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "f9e6d096",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1197,7 @@
        "[24783 rows x 2 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "a1a4de9e",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1222,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "ef946681",
    "metadata": {},
    "outputs": [
@@ -1241,7 +1241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sksan\\AppData\\Local\\Temp\\ipykernel_9424\\909855472.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\sksan\\AppData\\Local\\Temp\\ipykernel_3392\\909855472.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "c7659708",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1269,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "491482ae",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1288,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sksan\\AppData\\Local\\Temp\\ipykernel_9424\\4210585280.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\sksan\\AppData\\Local\\Temp\\ipykernel_3392\\4210585280.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "063164a7",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1315,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "8beedfd3",
    "metadata": {},
    "outputs": [
@@ -1336,7 +1336,7 @@
        "<Axes: xlabel='class', ylabel='count'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "600b05f1",
    "metadata": {},
    "outputs": [
@@ -1365,7 +1365,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sksan\\AppData\\Local\\Temp\\ipykernel_9424\\3258337578.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\sksan\\AppData\\Local\\Temp\\ipykernel_3392\\3258337578.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "89af12a1",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1430,7 @@
        "1      1  !!!!! RT @mleew17: boy dats cold...tyga dwn ba..."
       ]
      },
-     "execution_count": 45,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "1a0faf66",
    "metadata": {},
    "outputs": [],
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "id": "d580325e",
    "metadata": {},
    "outputs": [
@@ -1479,12 +1479,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "id": "ab834cc6",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.drop(\"id\",axis =1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c8c20014",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"dataset\")"
    ]
   },
   {
